# DSBMixer

./: CMakeLists.txt  LICENSE  Makefile  README  README.adoc  README.md  defs.h.in  defs.inc  dsbmixer-dbus  dsbmixer.c  dsbmixer.desktop  dsbmixer.pro  dsbmixer_backend.c  readme.mdoc  resources.qrc
gtk-helper/: gtk-helper.c  gtk-helper.h
lib/: config.c  config.h  dsbcfg  libdsbmixer.c  libdsbmixer.h
lib/backend/: CMakeLists.txt  backend.pro  dsbmixer_backend.c
lib/dsbcfg/: dsbcfg.c  dsbcfg.h
lib/qt-helper/: qt-helper.cpp  qt-helper.h
locale/: de.po  dsbmixer_de.qm  dsbmixer_de.ts  dsbmixer_fr.ts  dsbmixer_sv.ts
scripts/: dsbmixer-pa  dsbmixer_restart_pa
src/: aboutwin.cpp  aboutwin.h  appsmixer.cpp  appsmixer.h  chanslider.cpp  chanslider.h  contributors.h  iconloader.cpp  iconloader.h  iconthemeselector.cpp  iconthemeselector.h  main.cpp  mainwin.cpp  mainwin.h  mixer.cpp  mixer.h  mixerlist.cpp  mixerlist.h  mixersettings.cpp  mixersettings.h  mixertabs.cpp  mixertabs.h  mixertrayicon.cpp  mixertrayicon.h  preferences.cpp  preferences.h  range.h  restartapps.cpp  restartapps.h  settings.h  soundsettings.cpp  soundsettings.h  src.pro  thread.cpp  thread.h
src/qt-helper/: qt-helper.cpp  qt-helper.h
